editing collect to list